Added ticket scanning, admin's view of EventApproveals
Every User on the Profile can tap on MyID button which displays users ID in QR code. That QR code can be used by Exhibitor to check if user bought tickets for event. Exhibitor gets clear and simple green or red screen for simple checking. For QR code scanning, MercariQRScanner pod was used. On EventApproveal, ApprovealStatus enum was added for easier checks.  On AdminDashboard, Oranize button was added which displays table of all EventApproveals. Only those approveals that are in awating feedback status can be changed. For others, details view is available.

--- a/Spancirfest/Spancirfest/Modules/Admin/AdminDashboard/AdminDashboard.storyboard
+++ b/Spancirfest/Spancirfest/Modules/Admin/AdminDashboard/AdminDashboard.storyboard
@@ -31,7 +31,13 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Admin" image="infinity" catalog="system" id="Osa-mt-SOX"/>
-                    <navigationItem key="navigationItem" title="Admin Dashboard" id="2dl-1s-Oja"/>
+                    <navigationItem key="navigationItem" title="Admin Dashboard" id="2dl-1s-Oja">
+                        <barButtonItem key="rightBarButtonItem" systemItem="organize" id="9b4-X8-Pgb">
+                            <connections>
+                                <action selector="didTapOrganizeButton:" destination="Jnh-AW-as5" id="qWS-dm-AO7"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="tableView" destination="8ae-zc-aXd" id="WfL-ll-Iuu"/>
