--- a/Spancirfest/Spancirfest/Modules/Exhibitor/ExhibitorDashboard/Published Events/ExhibitorDashboardEventTableViewCell.xib
+++ b/Spancirfest/Spancirfest/Modules/Exhibitor/ExhibitorDashboard/Published Events/ExhibitorDashboardEventTableViewCell.xib
@@ -24,44 +24,60 @@
                             <constraint firstAttribute="width" constant="100" id="RsY-hI-2kt"/>
                         </constraints>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="8zg-FU-bZ7">
-                        <rect key="frame" x="125" y="5" width="279" height="150"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="XA2-zT-Xxf">
+                        <rect key="frame" x="120" y="10" width="279" height="140"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FT6-Oy-aNV">
-                                <rect key="frame" x="0.0" y="0.0" width="41.5" height="37.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VSr-Q0-siC">
-                                <rect key="frame" x="0.0" y="37.5" width="41.5" height="37.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A8w-PI-Rsj">
-                                <rect key="frame" x="0.0" y="75" width="41.5" height="37.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OWH-yW-gAO">
-                                <rect key="frame" x="0.0" y="112.5" width="41.5" height="37.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="8zg-FU-bZ7">
+                                <rect key="frame" x="0.0" y="29" width="209" height="82"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FT6-Oy-aNV">
+                                        <rect key="frame" x="0.0" y="0.0" width="41.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VSr-Q0-siC">
+                                        <rect key="frame" x="0.0" y="20.5" width="41.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A8w-PI-Rsj">
+                                        <rect key="frame" x="0.0" y="41" width="41.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OWH-yW-gAO">
+                                        <rect key="frame" x="0.0" y="61.5" width="41.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iIc-T0-406">
+                                <rect key="frame" x="209" y="45" width="70" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="OhL-6e-iGF"/>
+                                    <constraint firstAttribute="width" constant="70" id="drh-IC-IAi"/>
+                                </constraints>
+                                <state key="normal" image="camera.fill" catalog="system"/>
+                                <connections>
+                                    <action selector="didTapScanButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Yks-FA-sRR"/>
+                                </connections>
+                            </button>
                         </subviews>
                     </stackView>
                 </subviews>
                 <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                 <constraints>
-                    <constraint firstItem="8zg-FU-bZ7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="0yE-Kb-yyJ"/>
-                    <constraint firstAttribute="trailing" secondItem="8zg-FU-bZ7" secondAttribute="trailing" constant="5" id="48O-o8-z7h"/>
+                    <constraint firstAttribute="trailing" secondItem="XA2-zT-Xxf" secondAttribute="trailing" constant="10" id="81n-10-0ce"/>
+                    <constraint firstItem="XA2-zT-Xxf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="DGK-YE-yp2"/>
                     <constraint firstItem="kRn-du-bVb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="NGb-xn-WUd"/>
+                    <constraint firstItem="XA2-zT-Xxf" firstAttribute="leading" secondItem="kRn-du-bVb" secondAttribute="trailing" constant="10" id="RR8-bA-s22"/>
                     <constraint firstItem="kRn-du-bVb" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="cuD-Lc-Cfv"/>
-                    <constraint firstAttribute="bottom" secondItem="8zg-FU-bZ7" secondAttribute="bottom" constant="5" id="klQ-Ab-8cC"/>
-                    <constraint firstItem="8zg-FU-bZ7" firstAttribute="leading" secondItem="kRn-du-bVb" secondAttribute="trailing" constant="15" id="yT3-40-jCI"/>
+                    <constraint firstAttribute="bottom" secondItem="XA2-zT-Xxf" secondAttribute="bottom" constant="10" id="lvb-DC-sNF"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -76,6 +92,7 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="camera.fill" catalog="system" width="128" height="94"/>
         <systemColor name="secondarySystemBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
