--- a/Spancirfest/Spancirfest/Modules/Admin/Approveal/Approveal.storyboard
+++ b/Spancirfest/Spancirfest/Modules/Admin/Approveal/Approveal.storyboard
@@ -210,6 +210,36 @@
             </objects>
             <point key="canvasLocation" x="831.88405797101461" y="-206.25"/>
         </scene>
+        <!--Aproveal List View Controller-->
+        <scene sceneID="X67-ad-pkb">
+            <objects>
+                <viewController storyboardIdentifier="AprovealListViewController" id="FPc-fg-lnX" customClass="AprovealListViewController" customModule="Spancirfest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="B67-n4-Xob">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dhF-NW-d4m">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="UGA-WI-Dh6"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="dhF-NW-d4m" firstAttribute="leading" secondItem="UGA-WI-Dh6" secondAttribute="leading" id="Bds-N6-lf6"/>
+                            <constraint firstItem="UGA-WI-Dh6" firstAttribute="trailing" secondItem="dhF-NW-d4m" secondAttribute="trailing" id="OaD-E6-bhW"/>
+                            <constraint firstItem="dhF-NW-d4m" firstAttribute="top" secondItem="UGA-WI-Dh6" secondAttribute="top" id="Val-Qj-ttZ"/>
+                            <constraint firstItem="UGA-WI-Dh6" firstAttribute="bottom" secondItem="dhF-NW-d4m" secondAttribute="bottom" id="oWr-6N-Dmw"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="dhF-NW-d4m" id="vM1-Z7-jSX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EY1-gp-Bi6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1699" y="-206"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="labelColor">
