--- a/Spancirfest/Spancirfest/Modules/Common/LocationDetails/LocationDetails.storyboard
+++ b/Spancirfest/Spancirfest/Modules/Common/LocationDetails/LocationDetails.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qMW-eh-Fdu">
-                                <rect key="frame" x="0.0" y="362" width="414" height="500"/>
+                                <rect key="frame" x="0.0" y="396" width="414" height="500"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xgp-qX-Ngg">
                                         <rect key="frame" x="20" y="20" width="374" height="24"/>
@@ -56,7 +56,7 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vMy-V0-m12"/>
                         <constraints>
-                            <constraint firstItem="vMy-V0-m12" firstAttribute="bottom" secondItem="qMW-eh-Fdu" secondAttribute="bottom" id="05v-xs-IZU"/>
+                            <constraint firstAttribute="bottom" secondItem="qMW-eh-Fdu" secondAttribute="bottom" id="05v-xs-IZU"/>
                             <constraint firstItem="vMy-V0-m12" firstAttribute="trailing" secondItem="qMW-eh-Fdu" secondAttribute="trailing" id="bFc-IO-GNU"/>
                             <constraint firstItem="qMW-eh-Fdu" firstAttribute="leading" secondItem="vMy-V0-m12" secondAttribute="leading" id="oRU-96-QtI"/>
                         </constraints>
@@ -82,7 +82,6 @@
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7cz-fw-sQS">
                                 <rect key="frame" x="0.0" y="44" width="414" height="852"/>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <gestureRecognizers/>
                             </imageView>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="on7-4f-WtM">
