--- a/Spancirfest/Spancirfest/Modules/Common/Event/Event.storyboard
+++ b/Spancirfest/Spancirfest/Modules/Common/Event/Event.storyboard
@@ -314,7 +314,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sY2-fr-UbU">
-                                <rect key="frame" x="0.0" y="114" width="414" height="748"/>
+                                <rect key="frame" x="0.0" y="114" width="414" height="782"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Event Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q5m-rW-6oL">
                                         <rect key="frame" x="30" y="155" width="354" height="50"/>
@@ -326,7 +326,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xml-OL-GNE">
-                                        <rect key="frame" x="30" y="220" width="354" height="428"/>
+                                        <rect key="frame" x="30" y="220" width="354" height="462"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="BIq-Ll-7SR">
                                                 <rect key="frame" x="0.0" y="0.0" width="147.5" height="20.5"/>
@@ -346,7 +346,7 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="s9O-mO-6Cm">
-                                                <rect key="frame" x="0.0" y="79.5" width="139.5" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="86.5" width="139.5" height="20.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ending date:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jT5-sF-c71">
                                                         <rect key="frame" x="0.0" y="0.0" width="95.5" height="20.5"/>
@@ -363,7 +363,7 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Qeh-E1-4Hk">
-                                                <rect key="frame" x="0.0" y="159" width="186" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="173" width="186" height="20.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number of people:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lx4-wl-em2">
                                                         <rect key="frame" x="0.0" y="0.0" width="142" height="20.5"/>
@@ -380,7 +380,7 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="VU9-L8-g8r">
-                                                <rect key="frame" x="0.0" y="239" width="87.5" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="259" width="87.5" height="20.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RGa-vE-f3S">
                                                         <rect key="frame" x="0.0" y="0.0" width="43.5" height="20.5"/>
@@ -397,7 +397,7 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="eGH-V9-DoN">
-                                                <rect key="frame" x="0.0" y="318.5" width="201" height="30"/>
+                                                <rect key="frame" x="0.0" y="345.5" width="201" height="30"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5rs-ZR-YQ9">
                                                         <rect key="frame" x="0.0" y="0.0" width="70" height="30"/>
@@ -421,7 +421,7 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="5oy-7F-vlW">
-                                                <rect key="frame" x="0.0" y="407.5" width="109.5" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="441.5" width="109.5" height="20.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aBP-20-g9t">
                                                         <rect key="frame" x="0.0" y="0.0" width="75" height="20.5"/>
@@ -440,7 +440,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="QHk-VR-2s7">
-                                        <rect key="frame" x="20" y="663" width="374" height="70"/>
+                                        <rect key="frame" x="20" y="697" width="374" height="70"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kjz-NK-EFU">
                                                 <rect key="frame" x="0.0" y="18" width="187" height="34"/>
@@ -502,7 +502,7 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="51v-1f-ATD"/>
                         <constraints>
-                            <constraint firstItem="51v-1f-ATD" firstAttribute="bottom" secondItem="sY2-fr-UbU" secondAttribute="bottom" id="0q6-5q-BY6"/>
+                            <constraint firstAttribute="bottom" secondItem="sY2-fr-UbU" secondAttribute="bottom" id="0q6-5q-BY6"/>
                             <constraint firstItem="sY2-fr-UbU" firstAttribute="leading" secondItem="51v-1f-ATD" secondAttribute="leading" id="4Lw-wD-usK"/>
                             <constraint firstItem="sY2-fr-UbU" firstAttribute="top" secondItem="51v-1f-ATD" secondAttribute="top" constant="70" id="cmw-bv-FhY"/>
                             <constraint firstItem="51v-1f-ATD" firstAttribute="trailing" secondItem="sY2-fr-UbU" secondAttribute="trailing" id="fXl-BP-8II"/>
